--- a/index.html
+++ b/index.html
@@ -208,6 +208,16 @@
           </ul>
         </div>
       </section>
+
+      <!-- Regular customers -->
+      <section class="regular-customers-section section">
+        <div class="container">
+        <h2 class="regular-customers-titel">Постійні клієнти</h2>
+<div class="regular-customers-icon">
+
+</div>
+</div>
+      </section>
     </main>
 
     <!-- Footer -->
