--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <ul class="our-activity-icon-list list">
             <li class="our-activity-icon">
                   <svg class="activity-icon" width="70" height="70">
-                <use href="images/icons/antenna"></use>
+                <use href="./images/sprite.svg/#icon-antenna"></use>
               </svg>
             </li>
             <li class="our-activity-icon">icon</li>
