update css and html

--- a/index.html
+++ b/index.html
@@ -75,12 +75,24 @@
             <ul class="our-activity-icon-list list">
             <li class="our-activity-icon">
                   <svg class="activity-icon" width="70" height="70">
-                <use href="./images/sprite.svg/#icon-antenna"></use>
+                <use href="./images/sprite.svg#icon-antenna"></use>
               </svg>
             </li>
-            <li class="our-activity-icon">icon</li>
-            <li class="our-activity-icon">icon</li>
-            <li class="our-activity-icon">icon</li>
+            <li class="our-activity-icon">
+                <svg class="activity-icon" width="70" height="70">
+                <use href="./images/sprite.svg#icon-clock"></use>
+              </svg>
+            </li>
+            <li class="our-activity-icon">
+                     <svg class="activity-icon" width="70" height="70">
+                <use href="./images/sprite.svg#icon-diagram"></use>
+              </svg>
+            </li>
+            <li class="our-activity-icon">
+                    <svg class="activity-icon" width="70" height="70">
+                <use href="./images/sprite.svg#icon-astronaut"></use>
+              </svg>
+            </li>
           </ul>
           <ul class="our-activity-list">
             <li class="our-activity-items">
