update css and html files

--- a/index.html
+++ b/index.html
@@ -246,12 +246,43 @@
         <div class="container">
         <h2 class="regular-customers-titel">Постійні клієнти</h2>
         <ul class="regular-customers-icon-list list">
-          <li class="regular-customers-icon">icon</li>
-          <li class="regular-customers-icon">icon</li>
-          <li class="regular-customers-icon">icon</li>
-          <li class="regular-customers-icon">icon</li>
-          <li class="regular-customers-icon">icon</li>
-          <li class="regular-customers-icon">icon</li>
+          <li class="regular-customers-item">
+            <svg class="regular-costumers-icon" width="106";
+                height="60";>
+              <use href="./images/sprite.svg#icon-clientc"></use>
+            </svg>
+          </li>
+          <li class="regular-customers-item">
+                     <svg class="regular-costumers-icon" width="106";
+                height="60";>
+              <use href="./images/sprite.svg#icon-clientb"></use>
+            </svg>
+          </li>
+          <li class="regular-customers-item">
+                       <svg class="regular-costumers-icon" width="106";
+                height="60";>
+              <use href="./images/sprite.svg#icon-clienta"></use>
+            </svg>
+          </li>
+          <li class="regular-customers-item">
+                    <svg class="regular-costumers-icon" width="106";
+                height="60";>
+              <use href="./images/sprite.svg#icon-client"></use>
+            </svg>
+
+          </li>
+          <li class="regular-customers-item">
+                     <svg class="regular-costumers-icon" width="106";
+                height="60";>
+              <use href="./images/sprite.svg#icon-clientf"></use>
+            </svg>
+          </li>
+          <li class="regular-customers-item">
+            <svg class="regular-costumers-icon" width="106";
+                height="60";>
+              <use href="./images/sprite.svg#icon-clientd"></use>
+            </svg>
+          </li>
         </ul>
 
 </div>
