update css and html

--- a/index.html
+++ b/index.html
@@ -184,6 +184,36 @@
                 <p class="product-designer-profession team-proffesion">
                   Product Designer
                 </p>
+                 <ul class="team-social-link-list list">
+            <li class="team-social-link-item">
+                        <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+               <svg class="regular-costumers-icon" width="20";
+                height="20";
+               >
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+              <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+              <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+            </li>
+          </ul>
               </div>
             </li>
             <li class="team-members">
@@ -199,6 +229,36 @@
                 <p class="frontend-developer-profession team-proffesion">
                   Frontend Developer
                 </p>
+            <ul class="team-social-link-list list">
+            <li class="team-social-link-item">
+                        <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+               <svg class="regular-costumers-icon" width="20";
+                height="20";
+               >
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+              <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+              <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+            </li>
+          </ul>
               </div>
             </li>
             <li class="team-members">
@@ -212,6 +272,36 @@
               <div class="team-members-info">
                 <h3 class="marketing-name team-name">Микола Тарасов</h3>
                 <p class="marketing-profession team-proffesion">Marketing</p>
+           <ul class="team-social-link-list list">
+            <li class="team-social-link-item">
+                        <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+               <svg class="regular-costumers-icon" width="20";
+                height="20";
+               >
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+              <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+              <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+            </li>
+          </ul>
               </div>
             </li>
             <li class="team-members">
@@ -228,10 +318,34 @@
                   UI Designer
                 </p>
                       <ul class="team-social-link-list list">
-            <li class="team-social-link-item">icon</li>
-            <li class="team-social-link-item">icon</li>
-            <li class="team-social-link-item">icon</li>
-            <li class="team-social-link-item">icon</li>
+            <li class="team-social-link-item">
+                        <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+               <svg class="regular-costumers-icon" width="20";
+                height="20";
+               >
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+              <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+            </li>
+
+            <li class="team-social-link-item">
+              <svg class="regular-costumers-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+            </li>
           </ul>
               </div>
          
@@ -292,7 +406,8 @@
     <!-- Footer -->
 
     <footer class="footer-section">
-     <div class="container">
+     <div class=" footer-container container">
+      <div class="footer-main-container">
       <a class="logo-footer" href="./index.html"
         ><span class="logo-footer-accent">Web</span>Studio</a
       >
@@ -312,16 +427,39 @@
           </li>
         </ul>
    </address>
+   </div>
                     <div class="footer-icons ">
             <p class="footer-icon-link-title">ПРИЄДНУЙТЕСЬ</p>
 
-           <ul class="footer-sicial-icon-list list">
-           
-          <li class="footer-sicial-icon">icon</li>
-          <li class="footer-sicial-icon">icon</li>
-          <li class="footer-sicial-icon">icon</li>
-          <li class="footer-sicial-icon">icon</li>
+      <ul class="footer-social-link-list list">
+            <li class="footer-social-link-item">
+                        <svg class="footer-social-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+            </li>
 
+            <li class="footer-social-link-item">
+               <svg class="footer-social-icon" width="20";
+                height="20";
+               >
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+            </li>
+
+            <li class="footer-social-link-item">
+              <svg class="footer-social-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+            </li>
+
+            <li class="footer-social-link-item">
+              <svg class="footer-social-icon" width="20";
+                height="20";>
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+            </li>
           </ul>
           </div>              
    
