update css and html

--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
               <use href="./images/sprite.svg#icon-clienta"></use>
             </svg>
           </li>
-          <li class="regular-customers-item">
-                    <svg class="regular-costumers-icon" width="106";
+          <li class="regular-customers-item-accent">
+                    <svg class="regular-costumers-icon-accent" width="106";
                 height="60";>
               <use href="./images/sprite.svg#icon-client"></use>
             </svg>
@@ -544,7 +544,7 @@
 
     <footer class="footer-section">
      <div class=" footer-container container">
-      <div class="footer-main-container">
+      <div class="footer-main-container footer-blok">
       <a class="logo-footer" href="./index.html"
         ><span class="logo-footer-accent">Web</span>Studio</a
       >
@@ -565,17 +565,16 @@
         </ul>
    </address>
    </div>
-                    <div class="footer-icons ">
+                    <div class="footer-icons footer-blok ">
             <p class="footer-icon-link-title">ПРИЄДНУЙТЕСЬ</p>
 
       <ul class="footer-social-link-list list">
             <li class="footer-social-link-item">
-                <a  class="footer-social-link"
+            <a  class="footer-social-link"
             href=""
             target="_blank"
             rel="noopener no-referrer"
-            aria-label="іконка linkedin"
-            >
+            aria-label="іконка instagram"> 
                         <svg class="footer-social-icon" width="20";
                 height="20";>
               <use href="./images/sprite.svg#icon-instagram"></use>
@@ -584,25 +583,45 @@
             </li>
 
             <li class="footer-social-link-item">
+                        <a  class="footer-social-link-accent"
+            href=""
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="іконка twitter">
                <svg class="footer-social-icon" width="20";
                 height="20";
                >
               <use href="./images/sprite.svg#icon-twitter"></use>
             </svg>
+            </a>
             </li>
 
             <li class="footer-social-link-item">
+                <a  class="footer-social-link"
+            href=""
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="іконка facebook"
+            >
               <svg class="footer-social-icon" width="20";
                 height="20";>
               <use href="./images/sprite.svg#icon-facebook"></use>
             </svg>
+                </a>
             </li>
 
             <li class="footer-social-link-item">
+                <a  class="footer-social-link"
+            href=""
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="іконка linkedin"
+            >
               <svg class="footer-social-icon" width="20";
                 height="20";>
               <use href="./images/sprite.svg#icon-linkedin"></use>
             </svg>
+                </a>
             </li>
           </ul>
           </div>              
