update css and html

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             >
         
 
-                        <svg class="team-members-icon" width="20";
+                        <svg class="team-members-icon-accent" width="20";
                 height="20";>
               <use href="./images/sprite.svg#icon-instagram"></use>
             </svg>
