update css & html

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,13 +49,12 @@
       <ul class="header-list-contact">
         <li  class="group-link">
           <a class="header-link-mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+            >info@devstudio.com</a>
         </li>
         <li class="group-link">
           <a class="header-link-phone" href="tel:+380961111111"
-            >+38 (096) 111-11-11</a
-          >
+            >+38 (096) 111-11-11</a  
+         >
         </li>
       </ul>
 </div>
