Update css and html

--- a/index.html
+++ b/index.html
@@ -44,22 +44,28 @@
           </ul>
         </nav>
 
-        <ul class="header-list-contact">
+        <ul class="header-list-contact ">
           <li class="group-link">
             <a class="header-link-mail header-link" href="mailto:info@devstudio.com" 
              target="_blank" 
             rel="noopener no-referrer"
-            aria-label="іконка mail">   
+            aria-label="іконка mail"> 
+            <svg class="header-icon" width="16" height="12">
+              <use href="./images/sprite.svg#icon-mail"></use>
+            </svg>  
             info@devstudio.com
                   </a>
           </li>
           <li class="group-link">
             <a class="header-link-phone header-link" href="tel:+380961111111"
-                  target="_blank"
+            target="_blank"
             rel="noopener no-referrer"
-            aria-label="іконка mail">
-          +38 (096) 111-11-11</a
-            >
+            aria-label="іконка phone">
+              <svg class="header-icon" width="16" height="12">
+              <use href="./images/sprite.svg#icon-phone"></use>
+            </svg> 
+          +38 (096) 111-11-11
+           </a>
           </li>
         </ul>
       </div>
