add portfolio class conteiner and update css

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
     <!-- Main content -->
     <main>
       <section class="portfolio-section">
-  <div class="container">
+  <div class=" portfolio-container container">
         <!-- List filters -->
         <ul class="filters-list">
           <li class="filter-items">
