update css and html

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,8 +68,7 @@
           <svg class="portfolio-header-icon" width="10" height="16">
             <use href="./images/sprite.svg#icon-phone"></use>
           </svg>
-            +38 (096) 111-11-11</a  
-         >
+            +38 (096) 111-11-11</a>  
         </li>
       </ul>
 </div>
@@ -215,7 +214,8 @@
 
     <!-- Footer -->
     <footer class="footer-section">
-        <div class="container footer-conteiner">
+      <div class=" footer-container container">
+        <div class=" footer-conteiner">
       <a class="logo-footer" href="./index.html"
         ><span class="logo-footer-accent">Web</span>Studio</a
       >
@@ -236,6 +236,70 @@
         </ul>
       </address>
       </div>
+
+      <div class="footer-icons footer-blok ">
+        <p class="footer-icon-link-title">ПРИЄДНУЙТЕСЬ</p>
+
+  <ul class="footer-social-link-list list">
+        <li class="footer-social-link-item">
+        <a  class="footer-social-link"
+        href=""
+        target="_blank"
+        rel="noopener no-referrer"
+        aria-label="іконка instagram"> 
+                    <svg class="footer-social-icon" width="20";
+            height="20";>
+          <use href="./images/sprite.svg#icon-instagram"></use>
+        </svg>
+            </a>
+        </li>
+
+        <li class="footer-social-link-item">
+                    <a  class="footer-social-link-accent"
+        href=""
+        target="_blank"
+        rel="noopener no-referrer"
+        aria-label="іконка twitter">
+           <svg class="footer-social-icon" width="20";
+            height="20";
+           >
+          <use href="./images/sprite.svg#icon-twitter"></use>
+        </svg>
+        </a>
+        </li>
+
+        <li class="footer-social-link-item">
+            <a  class="footer-social-link"
+        href=""
+        target="_blank"
+        rel="noopener no-referrer"
+        aria-label="іконка facebook"
+        >
+          <svg class="footer-social-icon" width="20";
+            height="20";>
+          <use href="./images/sprite.svg#icon-facebook"></use>
+        </svg>
+            </a>
+        </li>
+
+        <li class="footer-social-link-item">
+            <a  class="footer-social-link"
+        href=""
+        target="_blank"
+        rel="noopener no-referrer"
+        aria-label="іконка linkedin"
+        >
+          <svg class="footer-social-icon" width="20";
+            height="20";>
+          <use href="./images/sprite.svg#icon-linkedin"></use>
+        </svg>
+            </a>
+        </li>
+      </ul>
+      </div>
+      
+      
+</div>
     </footer>
   </body>
 </html>
