remove sprite.svg

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             rel="noopener no-referrer"
             aria-label="іконка mail"> 
             <svg class="header-icon" width="16" height="12">
-              <use href="./images/sprite.svg#icon-mail"></use>
+              <use href="./images/sprite.svg#icon-envelope"></use>
             </svg>  
             info@devstudio.com
                   </a>
@@ -62,7 +62,7 @@
             rel="noopener no-referrer"
             aria-label="іконка phone">
               <svg class="header-icon" width="16" height="12">
-              <use href="./images/sprite.svg#icon-phone"></use>
+              <use href="./images/sprite.svg#icon-vector"></use>
             </svg> 
           +38 (096) 111-11-11
            </a>
