add sprite2.svg update css and html files

--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
             >
     
 
-               <svg class="team-members-icon-accent" width="20";
+               <svg class="team-members-icon" width="20";
                 height="20";
                >
-              <use href="./images/sprite.svg#icon-instagram"></use>
+              <use href="./images/sprite2.svg#icon-instagram"></use>
             </svg>
             </a>
          
@@ -230,7 +230,7 @@
                <svg class="team-members-icon" width="20";
                 height="20";
                >
-              <use href="./images/sprite.svg#icon-twitter"></use>
+              <use href="./images/sprite2.svg#icon-twitter"></use>
             </svg>
             </a>
             </li>
@@ -247,7 +247,7 @@
 
               <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-facebook"></use>
+              <use href="./images/sprite2.svg#icon-facebook"></use>
             </svg>
              </a>
             </li>
@@ -264,7 +264,7 @@
 
               <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-linkedin"></use>
+              <use href="./images/sprite2.svg#icon-linkedin"></use>
             </svg>
             </a>
             </li>
@@ -296,7 +296,7 @@
 
                         <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-instagram"></use>
+              <use href="./images/sprite2.svg#icon-instagram"></use>
             </svg>
             </a>
             </li>
@@ -313,7 +313,7 @@
                <svg class="team-members-icon" width="20";
                 height="20";
                >
-              <use href="./images/sprite.svg#icon-twitter"></use>
+              <use href="./images/sprite2.svg#icon-twitter"></use>
             </svg>
             </a>
             </li>
@@ -329,7 +329,7 @@
 
               <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-facebook"></use>
+              <use href="./images/sprite2.svg#icon-facebook"></use>
             </svg>
               </a>
             </li>
@@ -346,7 +346,7 @@
 
               <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-linkedin"></use>
+              <use href="./images/sprite2.svg#icon-linkedin"></use>
             </svg>
             </a>
             </li>
@@ -376,7 +376,7 @@
             >
             <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-instagram"></use>
+              <use href="./images/sprite2.svg#icon-instagram"></use>
             </svg>
        </a>
             </li>
@@ -391,7 +391,7 @@
                <svg class="team-members-icon" width="20";
                 height="20";
                >
-              <use href="./images/sprite.svg#icon-twitter"></use>
+              <use href="./images/sprite2.svg#icon-twitter"></use>
             </svg>
                      </a>
             </li>
@@ -405,7 +405,7 @@
             >
               <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-facebook"></use>
+              <use href="./images/sprite2.svg#icon-facebook"></use>
             </svg>
            </a>
             </li>
@@ -419,7 +419,7 @@
             >
               <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-linkedin"></use>
+              <use href="./images/sprite2.svg#icon-linkedin"></use>
             </svg>
         </a>
             </li>
@@ -449,7 +449,7 @@
             >
                <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-instagram"></use>
+              <use href="./images/sprite2.svg#icon-instagram"></use>
             </svg>
               </a>
             </li>
@@ -464,7 +464,7 @@
                <svg class="team-members-icon" width="20";
                 height="20";
                >
-              <use href="./images/sprite.svg#icon-twitter"></use>
+              <use href="./images/sprite2.svg#icon-twitter"></use>
             </svg>
               </a>
             </li>
@@ -478,7 +478,7 @@
             >
               <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-facebook"></use>
+              <use href="./images/sprite2.svg#icon-facebook"></use>
             </svg>
               </a>
             </li>
@@ -492,7 +492,7 @@
             >
               <svg class="team-members-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-linkedin"></use>
+              <use href="./images/sprite2.svg#icon-linkedin"></use>
             </svg>
                </a>
             </li>
@@ -590,13 +590,13 @@
             aria-label="іконка instagram"> 
                         <svg class="footer-social-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-instagram"></use>
+              <use href="./images/sprite2.svg#icon-instagram"></use>
             </svg>
                 </a>
             </li>
 
             <li class="footer-social-link-item">
-                        <a  class="footer-social-link-accent"
+                        <a  class="footer-social-link"
             href=""
             target="_blank"
             rel="noopener no-referrer"
@@ -604,7 +604,7 @@
                <svg class="footer-social-icon" width="20";
                 height="20";
                >
-              <use href="./images/sprite.svg#icon-twitter"></use>
+              <use href="./images/sprite2.svg#icon-twitter"></use>
             </svg>
             </a>
             </li>
@@ -618,7 +618,7 @@
             >
               <svg class="footer-social-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-facebook"></use>
+              <use href="./images/sprite2.svg#icon-facebook"></use>
             </svg>
                 </a>
             </li>
@@ -632,7 +632,7 @@
             >
               <svg class="footer-social-icon" width="20";
                 height="20";>
-              <use href="./images/sprite.svg#icon-linkedin"></use>
+              <use href="./images/sprite2.svg#icon-linkedin"></use>
             </svg>
                 </a>
             </li>
