update css and html

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                  <ul class="team-social-link-list list">
             <li class="team-social-link-item">
-             <a  class="social-link-accent"
+             <a  class="social-link"
             href=""
             target="_blank"
             rel="noopener no-referrer"
