update css and html

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <nav class="navigation">
           <ul class="header-link-list list">
             <li class="nav-link">
-              <a class="header-link-accent" href="./index.html">Студія</a>
+              <a class="header-link-nav-accent" href="./index.html">Студія</a>
             </li>
             <li class="nav-link">
-              <a class="header-link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-link-nav" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="nav-link">
-              <a class="header-link" href="#">Контакти</a>
+              <a class="header-link-nav" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -519,41 +519,42 @@
         <div class="container">
         <h2 class="regular-customers-titel">Постійні клієнти</h2>
         <ul class="regular-customers-icon-list list">
+
           <li class="regular-customers-item">
             <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite.svg#icon-clientc"></use>
+              <use href="./images/sprite2.svg#icon-client1"></use>
             </svg>
           </li>
           <li class="regular-customers-item">
                      <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite.svg#icon-clientb"></use>
+              <use href="./images/sprite2.svg#icon-client2"></use>
             </svg>
           </li>
           <li class="regular-customers-item">
                        <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite.svg#icon-clienta"></use>
+              <use href="./images/sprite2.svg#icon-client3"></use>
             </svg>
           </li>
-          <li class="regular-customers-item-accent">
-                    <svg class="regular-costumers-icon-accent" width="106";
+          <li class="regular-customers-item">
+                    <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite.svg#icon-client"></use>
+              <use href="./images/sprite2.svg#icon-client4"></use>
             </svg>
 
           </li>
           <li class="regular-customers-item">
                      <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite.svg#icon-clientf"></use>
+              <use href="./images/sprite2.svg#icon-client5"></use>
             </svg>
           </li>
           <li class="regular-customers-item">
             <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite.svg#icon-clientd"></use>
+              <use href="./images/sprite2.svg#icon-client6"></use>
             </svg>
           </li>
         </ul>
