--- a/index.html
+++ b/index.html
@@ -521,41 +521,76 @@
         <ul class="regular-customers-icon-list list">
 
           <li class="regular-customers-item">
+            <a class="regular-costumers-icon-link"
+             href=""
+             target="_blank"
+             rel="noopener no-referrer"
+             aria-label="іконка client1">
             <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite2.svg#icon-client1"></use>
+              <use class="regular-costumers-icon-item" href="./images/sprite2.svg#icon-client1"></use>
             </svg>
+          </a>
           </li>
           <li class="regular-customers-item">
+            <a class="regular-costumers-icon-link"
+            href=""
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="іконка client2">
                      <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite2.svg#icon-client2"></use>
+              <use class="regular-costumers-icon-item" href="./images/sprite2.svg#icon-client2"></use>
             </svg>
+            </a>
           </li>
           <li class="regular-customers-item">
+            <a class="regular-costumers-icon-link"
+            href=""
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="іконка client3">
                        <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite2.svg#icon-client3"></use>
+              <use class="regular-costumers-icon-item" href="./images/sprite2.svg#icon-client3"></use>
             </svg>
+            </a>
           </li>
           <li class="regular-customers-item">
+            <a class="regular-costumers-icon-link"
+            href=""
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="іконка client4">
                     <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite2.svg#icon-client4"></use>
+              <use class="regular-costumers-icon-item" href="./images/sprite2.svg#icon-client4"></use>
             </svg>
-
+            </a>
           </li>
           <li class="regular-customers-item">
+            <a class="regular-costumers-icon-link"
+            href=""
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="іконка client5">
                      <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite2.svg#icon-client5"></use>
+              <use class="regular-costumers-icon-item" href="./images/sprite2.svg#icon-client5"></use>
             </svg>
+            </a>
           </li>
           <li class="regular-customers-item">
+            <a class="regular-costumers-icon-link"
+            href=""
+            target="_blank"
+            rel="noopener no-referrer"
+            aria-label="іконка client6">
             <svg class="regular-costumers-icon" width="106";
                 height="60";>
-              <use href="./images/sprite2.svg#icon-client6"></use>
+              <use class="regular-costumers-icon-item" href="./images/sprite2.svg#icon-client6"></use>
             </svg>
+            </a>
           </li>
         </ul>
 
