--- a/portfolio.html
+++ b/portfolio.html
@@ -98,8 +98,9 @@
         </ul>
 <!-- List items -->
 
-        <ul class="portfolio-items-list">
+        <ul class="portfolio-items-list list">
           <li class="portfolio-item">
+            <div class="portfolio-item-blok">
             <a class="portfoli-item-link" href="#">
             <img  class="portfoli-image"
              src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
@@ -108,9 +109,11 @@
             <p class="portfolio-product">Веб-сайт</p>
              </div>
           </a>
+        </div>
         </li>
 
         <li class="portfolio-item">
+          <div class="portfolio-item-blok">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
               src="./images/portfolio/ПостерGoldenOrleanvsGoldenStar.jpg"
@@ -121,9 +124,11 @@
            <p class="portfolio-product">Дизайн</p>
            </div>
         </a>
+        </div>
         </li>
 
           <li class="portfolio-item">
+            <div class="portfolio-item-blok">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
               src="./images/portfolio/РесторанSeafood.jpg"
@@ -134,9 +139,11 @@
             <p class="portfolio-product">Додаток</p>
          </div>
           </a>
+        </div>
           </li>
 
           <li class="portfolio-item">
+            <div class="portfolio-item-blok">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
             src="./images/portfolio/ПроектPrime.jpg" alt="Проєкт Prime" />
@@ -145,9 +152,11 @@
             <p class="portfolio-product">Маркетинг</p>
            </div>
            </a>
+          </div>
           </li>
           
           <li class="portfolio-item">
+            <div class="portfolio-item-blok">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
             src="./images/portfolio/ПроєктBoxes.jpg" alt="Проєкт Boxes" />
@@ -156,9 +165,11 @@
             <p class="portfolio-product">Додаток</p>
             </div>
           </a>
+        </div>
           </li>
 
           <li class="portfolio-item">
+            <div class="portfolio-item-blok">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
               src="./images/portfolio/InspirationhasnoBorders.jpg"
@@ -169,8 +180,10 @@
             <p class="portfolio-product">Веб-сайт</p>
             </div>
           </a>
+        </div>
           </li>
           <li class="portfolio-item">
+            <div class="portfolio-item-blok">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
               src="./images/portfolio/ВиданняLimitedEdition.jpg"
@@ -181,9 +194,11 @@
             <p class="portfolio-product">Дизайн</p>
             </div>
           </a>
+        </div>
           </li>
 
           <li class="portfolio-item">
+            <div class="portfolio-item-blok">
             <a  class="portfoli-item-link" href="#">
             <img class="portfoli-image" 
             src="./images/portfolio/ПроєктLAB.jpg" alt="Проєкт LAB" />
@@ -192,10 +207,12 @@
   <h3 class="portfolio-product-name">Проєкт LAB</h3>
             <p class="portfolio-product">Маркетинг</p>
      </div>
-   </a>
+   </a> 
+  </div>
         </li>
 
           <li class="portfolio-item">
+            <div class="portfolio-item-blok">
             <a  class="portfoli-item-link"  href="#">
             <img class="portfoli-image"
               src="./images/portfolio/GrowingBusiness.jpg"
@@ -206,6 +223,7 @@
             <p class="portfolio-product">Додаток</p>
               </div>
             </a>
+          </div>
           </li>
             </ul>
           </div>
@@ -249,13 +267,13 @@
         aria-label="іконка instagram"> 
                     <svg class="footer-social-icon" width="20";
             height="20";>
-          <use href="./images/sprite.svg#icon-instagram"></use>
+          <use href="./images/sprite2.svg#icon-instagram"></use>
         </svg>
             </a>
         </li>
 
         <li class="footer-social-link-item">
-                    <a  class="footer-social-link-accent"
+                    <a  class="footer-social-link"
         href=""
         target="_blank"
         rel="noopener no-referrer"
@@ -263,7 +281,7 @@
            <svg class="footer-social-icon" width="20";
             height="20";
            >
-          <use href="./images/sprite.svg#icon-twitter"></use>
+          <use href="./images/sprite2.svg#icon-twitter"></use>
         </svg>
         </a>
         </li>
@@ -277,7 +295,7 @@
         >
           <svg class="footer-social-icon" width="20";
             height="20";>
-          <use href="./images/sprite.svg#icon-facebook"></use>
+          <use href="./images/sprite2.svg#icon-facebook"></use>
         </svg>
             </a>
         </li>
@@ -291,7 +309,7 @@
         >
           <svg class="footer-social-icon" width="20";
             height="20";>
-          <use href="./images/sprite.svg#icon-linkedin"></use>
+          <use href="./images/sprite2.svg#icon-linkedin"></use>
         </svg>
             </a>
         </li>
