update css and html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,14 +42,14 @@
             >
           </li>
           <li class="portfolio-nav-link">
-            <a class="portfolio-header-link" href="#">Контакти</a></li>
+            <a class="portfolio-header-link " href="#">Контакти</a></li>
         </ul>
       </nav>
 
       <ul class="header-list-contact">
         <li  class="group-link">
     
-          <a class="header-link-mail " href="mailto:info@devstudio.com"
+          <a class="header-link-mail header-link " href="mailto:info@devstudio.com"
           target="_blank"
           rel="noopener no-referrer"
           aria-label="іконка mail">
@@ -64,7 +64,7 @@
 
         <li class="group-link">
     
-          <a class="header-link-phone " href="tel:+380961111111"
+          <a class="header-link-phone header-link " href="tel:+380961111111"
           target="_blank"
           rel="noopener no-referrer"
           aria-label="іконка phone">
