update css and portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
           aria-label="іконка mail">
 
 <svg class="portfolio-header-icon icon-group" width="16"  height="12">
-  <use href="./images/sprite.svg#icon-envelope"></use>
+  <use class="icon-item" href="./images/sprite.svg#icon-envelope"></use>
 </svg>
             info@devstudio.com</a>
    
@@ -69,7 +69,7 @@
           rel="noopener no-referrer"
           aria-label="іконка phone">
           <svg class="portfolio-header-icon icon-group" width="10" height="16">
-            <use href="./images/sprite.svg#icon-vector"></use>
+            <use class="icon-item" href="./images/sprite.svg#icon-vector"></use>
           </svg>
             +38 (096) 111-11-11</a>
      
