Update css and html

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
           rel="noopener no-referrer"
           aria-label="іконка mail">
 
-<svg class="portfolio-header-icon icon-group" width="16"  height="12">
+<svg class="header-icon icon-group" width="16"  height="12">
   <use href="./images/sprite2.svg#icon-e-mail"></use>
 </svg>
             info@devstudio.com</a>
@@ -68,7 +68,7 @@
           target="_blank"
           rel="noopener no-referrer"
           aria-label="іконка phone">
-          <svg class="portfolio-header-icon icon-group" width="10" height="16">
+          <svg class="header-icon icon-group" width="10" height="16">
             <use href="./images/sprite2.svg#icon-smartphone"></use>
           </svg>
             +38 (096) 111-11-11</a>
