--- a/portfolio.html
+++ b/portfolio.html
@@ -238,7 +238,7 @@
     <!-- Footer -->
     <footer class="footer-section">
       <div class=" footer-container container">
-        <div class=" footer-conteiner">
+        <div class=" footer-main-container footer-blok">
       <a class="logo-footer" href="./index.html"
         ><span class="logo-footer-accent">Web</span>Studio</a
       >
