--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
           
           <li class="portfolio-item">
            
-            <a class="portfoli-item-link" href="#">
+            <a class="portfolio-item-link" href="#">
             <img class="portfolio-image"
             src="./images/portfolio/ПроєктBoxes.jpg" alt="Проєкт Boxes" />
             <div class="portfolio-item-title">
